--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@inkline/inkline": "^2.0.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuejs-loading-plugin": "^1.0.51"
   },
   "devDependencies": {
     "@inkline/vue-cli-plugin-inkline": "~2.3.6",
